Minor coaster exploit blocks

--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -230,6 +230,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block standing on some roof trimming before the coaster
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1926 2428 561"
+	"mins" "-126 -128 -400"
+	"maxs" "126 128 400"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- COASTER EXPLOITS
 ; --- Block roof by event start button to prevent
 {
@@ -425,6 +434,37 @@ add:
 	"maxs" "75 10 404"
 	"boxmins" "-75 -10 -404"
 	"boxmaxs" "75 10 404"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block jumping on a shrub by the end saferoom
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4916 2343 562"
+	"mins" "-1147 -24 -392"
+	"maxs" "114 24 392"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4839 2291 562"
+	"angles" "0 50 0"
+	"mins" "-46 -12 -392"
+	"maxs" "46 12 392"
+	"boxmins" "-46 -12 -392"
+	"boxmaxs" "46 12 392"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4971 2227 562"
+	"angles" "0 20 0"
+	"mins" "-110 -12 -392"
+	"maxs" "110 12 392"
+	"boxmins" "-110 -12 -392"
+	"boxmaxs" "110 12 392"
 	"initialstate" "1"
 	"BlockType" "1"
 }
