c2m2 Clipping on bottom of slide to prevent extreme ice-like movement c2m3 Added a damage trigger to discourage using a jesus spot on the right fence at the first coaster ramp c2m3 Added non-solid poles to indicate where exploit block clips on first ramp are c2m4 Moved added ammo pile after bumper cars and changed its model to make it more visible

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -896,6 +896,40 @@ add:
 	"fademindist" "200"
 	"fademaxdist" "300"
 }
+; --- Clipping on bottom of slide to prevent extreme ice-like movement
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2005 -2304 -101"
+	"angles" "5.5 0 0"
+	"mins" "-85 -240 -5"
+	"maxs" "85 240 5"
+	"boxmins" "-85 -240 -5"
+	"boxmaxs" "85 240 5"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2106 -2304 -82"
+	"angles" "27 0 0"
+	"mins" "-26 -240 -5"
+	"maxs" "26 240 5"
+	"boxmins" "-26 -240 -5"
+	"boxmaxs" "26 240 5"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2142 -2304 -52"
+	"angles" "47.5 0 0"
+	"mins" "-36 -240 -5"
+	"maxs" "36 240 5"
+	"boxmins" "-36 -240 -5"
+	"boxmaxs" "36 240 5"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Allow ghost infected to pass through the breakable walls at the event
 modify:
 {
