--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -366,6 +366,57 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Non-solid poles to indicate where clips are
+{
+	"classname" "prop_dynamic"
+	"origin" "-2699 1967 -76"
+	"angles" "0 0 0"
+	"model" "models/props_urban/metal_pole001.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2865 1961 -76"
+	"angles" "0 0 0"
+	"model" "models/props_urban/metal_pole001.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2865 1857 -76"
+	"angles" "0 0 0"
+	"model" "models/props_urban/metal_pole001.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Discourage using a jesus spot on the right fence at the first coaster ramp with a hurt trigger
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "coaster_jesus_hurt,AddOutput,mins -4 -65 -16,0,-1"
+	"OnMapSpawn" "coaster_jesus_hurt,AddOutput,maxs 4 65 16,0,-1"
+	"OnMapSpawn" "coaster_jesus_hurt,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "trigger_hurt"
+	"origin" "-2699 2029 144"
+	"targetname" "coaster_jesus_hurt"
+	"filtername" "survivor_filter"
+	"spawnflags" "1"
+	"damage" "0.02"
+	"damagecap" "2"
+	"damagemodel" "1"
+	"OnHurtPlayer" "coaster_jesus_hurt,SetDamage,0.5,-1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-2693 2023 135"
+	"angles" "0 0 0"
+	"model" "models/props_fortifications/barricade_razorwire001_128_reference.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
 ; --- Block climbing on the railings at the top of the first ramp
 {
 	"classname" "env_physics_blocker"
