--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -81,12 +81,12 @@ filter:
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
 add:
-; --- Ammo pile on table after bumper cars section
+; --- Ammo pile on first game hut after bumper cars section
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "444 1117 -151"
-	"angles" "0 0 0"
-	"model" "models/props/terror/ammo_stack.mdl"
+	"origin" "239 1242 -150"
+	"angles" "0 180 0"
+	"model" "models/props_unique/spawn_apartment/coffeeammo.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
