Changed door section in global_filters, replaced exploitable glass door model with one that cant be climbed on c5m3 added truck to bridge c2m1 fixed issue with clipping on added concrete blocks c4m2/3 added additional clipping to a debris pile players could get stuck on c4m2/3 moved position of added survivor ladder on back of gas station c5m2 reverted map distance c5m3 Clipping on wrecked car at the back end of the bridge to stop players getting stuck c4m1/4 changed distance points to 400

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -407,9 +407,10 @@ modify:
 }
 
 ; =====================================================
-; ==               PORTA POTTY DOOR FIX              ==
-; ==         Make porta potty doors breakable        ==
+; ==                 DOOR PROP FIXES                 ==
+; ==         Fix issues with different doors         ==
 ; =====================================================
+; --- Make porta potty doors breakable before they have been opened
 modify:
 ; --- Flags for starting closed
 {
@@ -435,6 +436,17 @@ modify:
 	replace:
 	{
 		"spawnflags" "8193"
+	}
+}
+; --- Replace exploitable door model with damaged version that can't be climbed on
+{
+	match:
+	{
+		"model" "models/props_doors/doorglassmain01.mdl"
+	}
+	replace:
+	{
+		"model" "models/props_doors/doorglassmain01_dm01.mdl"
 	}
 }
 
