--- a/cfg/stripper/maps/c4m3_sugarmill_b.cfg
+++ b/cfg/stripper/maps/c4m3_sugarmill_b.cfg
@@ -577,6 +577,30 @@ add:
 ; --- Clipping on various debris piles to stop players getting stuck
 {
 	"classname" "env_physics_blocker"
+	"origin" "3234 -4558 122"
+	"mins" "-40 -40 -7"
+	"maxs" "40 40 7"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "3143 -4606 111"
+	"mins" "-56 -61 -7"
+	"maxs" "56 61 7"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "3143 -4577 125"
+	"mins" "-52 -29 -7"
+	"maxs" "52 29 7"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
 	"origin" "3217 -4394 122"
 	"angles" "0 30 0"
 	"mins" "-16.5 -62.5 -6"
@@ -1331,23 +1355,34 @@ add:
 	"team" "2"
 }
 ; --- Survivor ladder at the back of the gas station to get on the roof
-{
-	"classname" "func_simpleladder"
-	"origin" "5595 -14414 -38"
-	"angles" "0 270 0"
-	"model" "*21"
-	"normal.x" "-1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "0"
-}
+;{
+;	"classname" "func_simpleladder"
+;	"origin" "5595 -14414 -38"
+;	"angles" "0 270 0"
+;	"model" "*21"
+;	"normal.x" "-1.00"
+;	"normal.y" "0.00"
+;	"normal.z" "0.00"
+;	"team" "0"
+;}
 {
 	"classname" "prop_dynamic"
-	"origin" "-1923 -13696 234"
-	"angles" "0 270 0"
+	"origin" "-1586 -13843 234"
+	"angles" "0 0 0"
 	"model" "models/props/cs_office/ladder1.mdl"
 	"solid" "0"
 	"disableshadows" "1"
+}
+modify:
+{
+	match:
+	{
+		"hammerid" "463783"
+	}
+	replace:
+	{
+		"team" "0"
+	}
 }
 
 
