--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -567,6 +567,29 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Clipping on wrecked car at the back end of the bridge to stop players getting stuck on the tires
+{
+	"classname" "env_physics_blocker"
+	"origin" "6422 -2046 485"
+	"angles" "0 125 0"
+	"mins" "-15 -6 -6"
+	"maxs" "15 6 6"
+	"boxmins" "-15 -6 -6"
+	"boxmaxs" "15 6 6"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "6399 -2108 487"
+	"angles" "0 -30 0"
+	"mins" "-15 -6 -6"
+	"maxs" "15 6 6"
+	"boxmins" "-15 -6 -6"
+	"boxmaxs" "15 6 6"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
@@ -712,6 +735,60 @@ add:
 	"model" "models/props_fortifications/concrete_block001_128_reference.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Truck and trailer on bridge by ambulance
+{
+	"classname" "prop_dynamic"
+	"origin" "6374 -3204 434"
+	"angles" "0 90 0"
+	"model" "models/props_vehicles/flatnose_truck.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendercolor" "53 92 39"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "6374 -3204 434"
+	"angles" "0 90 0"
+	"model" "models/props_vehicles/flatnose_truck_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "6374 -3482 434"
+	"angles" "0 0 0"
+	"model" "models/props_vehicles/semi_trailer.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Infected ladder on back of trailer
+{
+	"classname" "func_simpleladder"
+	"origin" "1046 -9909 440"
+	"angles" "0 0 0"
+	"model" "*88"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Block for survivors
+{
+	"classname" "env_physics_blocker"
+	"origin" "6374 -3108 696"
+	"mins" "-52 -50 -264"
+	"maxs" "52 50 264"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "6374 -3481 696"
+	"mins" "-52 -267 -264"
+	"maxs" "52 267 264"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 ; --- Extend wall at the cemetery entrance - Lighting cannot be made to match joining incorrectly lit walls
 {
