--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -36,7 +36,19 @@ modify:
 	}
 	replace:
 	{
-		"classname" "prop_physics_override"
+		"classname" "prop_physics";_override"
+	}
+}
+; --- Hotfixes for specific props
+; --- Diescraper ball
+{
+	match:
+	{
+		"model" "models/props_diescraper/statue.mdl"
+	}
+	replace:
+	{
+		"classname" "prop_physics"
 	}
 }
 
@@ -1107,7 +1119,7 @@ modify:
 }
 filter:
 {
-	"classname" "/.*prop_physics.*/"
+	"classname" "prop_physics"
 	"model" "models/props_junk/gascan001a.mdl"
 }
 {
@@ -1130,7 +1142,7 @@ modify:
 }
 filter:
 {
-	"classname" "/.*prop_physics.*/"
+	"classname" "prop_physics"
 	"model" "models/props_junk/propanecanister001a.mdl"
 }
 {
@@ -1153,7 +1165,7 @@ modify:
 }
 filter:
 {
-	"classname" "/.*prop_physics.*/"
+	"classname" "prop_physics"
 	"model" "models/props_equipment/oxygentank01.mdl"
 }
 {
@@ -1164,7 +1176,7 @@ filter:
 }
 ; --- Fireworks
 {
-	"classname" "/.*prop_physics.*/"
+	"classname" "prop_physics"
 	"model" "models/props_junk/explosive_box001.mdl"
 }
 {
